--- a/frontend/src/components/Search/Results.module.css
+++ b/frontend/src/components/Search/Results.module.css
@@ -30,6 +30,12 @@
   z-index: 2;
 }
 
+.bookmark {
+  position: absolute;
+  left: 30px;
+  z-index: 2;
+}
+
 .icon {
   width: 18px;
   display: block;
